# webinar-open-libs-python

./: .clang-tidy  .gitignore  CMakeLists.txt  pyproject.toml
.github/workflows/: test.yaml
cpp/: CMakeLists.txt  fibonacci.cpp  fibonacci.hpp  fibonacci_test.cpp  module.cpp
python/: __main__.py  fibonacci.py  fibonacci_test.py
script/: pyenv.cmd  pyenv.ps1  pyenv.sh  vcpkg.cmd  vcpkg.sh
